# obfuscation-peb-walk

./: CMakeLists.txt  README.md  build.bat
src/: main.cpp  peb.asm  peb.h  peb_walk.asm  peb_walk.h  peb_walk.inl  utils.h
